<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:verticalScrollbarPosition="right"
        tools:context=".AddBathingSiteFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbarStyle="insideOverlay"
        android:visibility="visible"
        tools:visibility="visible"
        android:orientation="horizontal"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorContentDescription="@string/Required">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:hint="@string/name"
                    android:visibility="visible"
                    tools:visibility="visible"
                    android:autofillHints="true"
                    android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:hint="@string/description"
                android:inputType="text"
                android:autofillHints="true"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/Required"
                app:helperTextTextColor="@color/red">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/adress"
                app:helperText="@string/Required"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/adress"
                android:inputType="text"
                android:autofillHints="true"/>
            </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                app:helperText="@string/Required"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lon"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:autofillHints="true"
                    android:ems="10"
                    android:hint="@string/longitude"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                     />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                app:helperText="@string/Required"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lat"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:autofillHints="true"
                    android:ems="10"
                    android:hint="@string/latitude"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    app:helperText="@string/Required" />
            </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
                <RatingBar
                android:id="@+id/grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="5"
                android:numStars="5"
                android:rating="1"
                    />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="200dp"
                android:minWidth="200dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/temp"
                    android:layout_width="fill_parent"
                    android:layout_height="80dp"
                    android:autofillHints="true"
                    android:ems="10"
                    android:hint="@string/water_temperature"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:minWidth="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/temp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date"
                    android:layout_width="fill_parent"
                    android:layout_height="80dp"
                    android:autofillHints="true"
                    android:ems="10"
                    android:hint="@string/date_water_temp"
                    android:inputType="date"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>